<resources>
    <string name="app_name">Nilami</string>
    <string name="your_auctions">Your Auctions</string>
    <string name="interested_in">Interested In</string>
    <string name="bidding_arena">Bidding Arena</string>
    <string name="need_help">Need Help?</string>
    <string name="notification">Notifications</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_auctions">All Auctions</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="set_minimum_bid_rupees">Set MINIMUM Bid(Rupees)</string>
</resources>
