<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/product_name"/>

    <EditText
        android:id="@+id/add_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_name"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/add_min_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/BackButton"
        android:hint="@string/set_minimum_bid_rupees"
        android:layout_marginBottom="20dp"
        android:inputType="number" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddAuctionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_arrow_back" />
</RelativeLayout>